Fix back button on small screen sizes for SuccessView

--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step5_SuccessView/SuccessView.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step5_SuccessView/SuccessView.scss
@@ -24,6 +24,9 @@
 	display: flex;
 	width: 68px;
 	margin-top: 142px;
+	@include breakpoint(small down) {
+		margin-top: 90px;
+	}
 	.SuccessView__back {
 		margin-top: 8px;
 		font-size: 16px;
